web-infras/parser/tests/fixtures/babel/core/uncategorised/489/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,11)
1|(function arguments() {'use strict'; })()
 |         ^
